[package]
name = "transmutation"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
crossterm = { version = "0.19", features = [ "serde" ] }
regex = "1.5"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui = { version = "0.14", default-features = false, features = ["crossterm", "serde"] }
